# ai-presales-via-feishu-cli

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
docs/: architecture.md  contest-submission.md  demo-script.md
docs/superpowers/specs/: 2026-05-01-ai-presales-feishu-cli-skill-design.md
examples/live/: env.example  feishu-command-examples.md
examples/offline/: case-library.json  expected-output.md  product-capabilities.json  sales-report.json  scenario-packages.json
skills/ai-presales/: SKILL.md
skills/ai-presales/references/: base-schema.md  privacy-rules.md  scenario-package-schema.md  solution-template.md
skills/ai-presales/scripts/: collect_context.py  render_solution.py  validate_sample_data.py
tests/: conftest.py  test_collect_context.py  test_privacy_scan.py  test_render_solution.py  test_validate_sample_data.py
